data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_506.wast
;; 7. **Test 7: `nop` within Loop Invariant Code Motion**    - **Constraint Check**: Validate that `nop` in areas optimized for loop invariant code does not affect optimization and execution.    - **Description**: Insert `nop` within code identified as loop invariant and verify the optimization does not misinterpret the loop structure or iteration.

(assert_invalid
  (module
    (func $loop-invariant (result i32)
      (local i32)
      (loop (nop) (br 1)))  
  )
  "loop invariant code motion"
)